# tradebench

./: .gitignore  ARCHITECTURE.md  Doxyfile  LICENSE  README.md  docker-compose.yml  generate-proto.ps1  generate-proto.sh
.github/: actions.yml
.github/workflows/: actions.yml
bruno/: Admin Stats.yml  Delete History.yml  Get History.yml  Login.yml  Register.yml  SSE Event Stream.yml  Start Analysis.yml  Upgrade Subscription.yml  gRPC Start Analysis.yml  opencollection.yml
bruno/environments/: local.yml
cpp-core/: CMakeLists.txt  dockerfile
cpp-core/include/: tradebench_core.h
cpp-core/src/: database.cpp  engine.cpp  grpc_service.cpp  main.cpp
cpp-core/tests/: unit_tests.cpp
database/: init.sql
docs/html/: AdminController_8php.html  AiController_8php.html  AiService_8php.html  AnalysisClient_8php.html  AnalysisController_8php.html  AnalysisTask_8php.html  AuthController_8php.html  AuthMiddleware_8php.html  BinanceService_8php.html  CurrencyData_8php.html  Database_8php.html  Response_8php.html  Router_8php.html  SubscriptionController_8php.html  SystemController_8php.html  annotated.html  classAnalysisServiceImpl.html  classApp_1_1AnalysisClient.html  classApp_1_1Controllers_1_1AdminController.html  classApp_1_1Controllers_1_1AiController.html  classApp_1_1Controllers_1_1AnalysisController.html  classApp_1_1Controllers_1_1AuthController.html  classApp_1_1Controllers_1_1SubscriptionController.html  classApp_1_1Controllers_1_1SystemController.html  classApp_1_1Core_1_1AuthMiddleware.html  classApp_1_1Core_1_1Database.html  classApp_1_1Core_1_1Response.html  classApp_1_1Core_1_1Router.html  classApp_1_1Models_1_1AnalysisTask.html  classApp_1_1Models_1_1CurrencyData.html  classApp_1_1Services_1_1AiService.html  classApp_1_1Services_1_1BinanceService.html  classBacktestingEngine.html  classDataRepository.html  classes.html  database_8cpp.html  dir_02e6130c83cba5396ccca1355e087a84.html  dir_0aa5fcb930b89f1196717f8dec644e53.html  dir_16a1e77106b6042102f385b4db150cb6.html  dir_1f2761cc359052fa03e1c10ef3536fd5.html  (+28 more)
docs/html/search/: all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  functions_c.js  functions_d.js  functions_e.js  (+11 more)
nginx/conf.d/: default.conf
php-app/: Dockerfile  composer.json  phpunit.xml
php-app/.phpunit.cache/: test-results
php-app/public/: admin.html  admin.php  dashboard.html  dashboard.php  index.html  index.php  landing.html  landing.php
php-app/public/assets/css/: style.css  styles.css
php-app/public/assets/js/: admin.js  dashboard.js  landing.js
php-app/src/: AnalysisClient.php  Client.php
php-app/src/Controllers/: AdminController.php  AiController.php  AnalysisController.php  AuthController.php  SubscriptionController.php  SystemController.php
php-app/src/Core/: AuthMiddleware.php  Database.php  Response.php  Router.php  UserRole.php
php-app/src/Models/: AnalysisTask.php  CurrencyData.php
php-app/src/Services/: AiService.php  BinanceService.php
php-app/tests/: AiServiceTest.php  AnalysisClientTest.php  AuthMiddlewareTest.php  BinanceServiceTest.php  CurrencyDataTest.php  DatabaseTest.php  ResponseTest.php  RouterTest.php
proto/: analysis.proto
